Playwright setup and simple image block test

--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,22 @@ node_modules/
 
 # dotenv environment variables file
 .env
+.wp-env.json
 .DS_Store
 build/index.js.map
+
+# Test results directory
+/tests/e2e/__snapshots__/
+/tests/e2e/test-results/
+/tests/test-results/
+/tests/e2e/screenshots/
+
+# Playwright report directory
+/playwright-report/
+
+# Playwright cache directory
+/playwright/.cache/
+
+# Playwright
+/blob-report/
+*.map
