--- a/package.json
+++ b/package.json
@@ -1,20 +1,35 @@
 {
-	"name": "wp-ai-image-gen",
-	"version": "0.1.5",
-	"description": "A plugin to generate images using AI.",
-	"author": "Jacob Schweitzer",
-	"license": "GPL-2.0-or-later",
-	"main": "build/index.js",
-	"scripts": {
-		"build": "wp-scripts build",
-		"format": "wp-scripts format",
-		"lint:css": "wp-scripts lint-style",
-		"lint:js": "wp-scripts lint-js",
-		"packages-update": "wp-scripts packages-update",
-		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "wp-scripts start"
-	},
-	"devDependencies": {
-		"@wordpress/scripts": "^27.8.0"
-	}
+  "name": "wp-ai-image-gen",
+  "version": "0.1.5",
+  "description": "A plugin to generate images using AI.",
+  "author": "Jacob Schweitzer",
+  "license": "GPL-2.0-or-later",
+  "main": "build/index.js",
+  "scripts": {
+    "build": "wp-scripts build",
+    "format": "wp-scripts format",
+    "lint:css": "wp-scripts lint-style",
+    "lint:js": "wp-scripts lint-js",
+    "packages-update": "wp-scripts packages-update",
+    "plugin-zip": "wp-scripts plugin-zip",
+    "start": "wp-scripts start",
+    "wp-env": "wp-env",
+    "test:env:start": "wp-env start && sleep 10",
+    "test:env:stop": "wp-env stop",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:playwright": "wp-scripts test-playwright",
+    "test:playwright:help": "wp-scripts test-playwright --help",
+    "test:playwright:debug": "wp-scripts test-playwright --debug",
+    "test:playwright:headed": "wp-scripts test-playwright --headed"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.50.1",
+    "@types/node": "^22.13.4",
+    "@wordpress/e2e-test-utils-playwright": "^1.18.0",
+    "@wordpress/env": "^8.12.0",
+    "@wordpress/scripts": "^27.8.0",
+    "dotenv": "^16.4.7"
+  }
 }
