--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,4 @@
-name: Performance Tests
+name: Playwright Tests
 
 on:
   push:
@@ -17,21 +17,16 @@ env:
   LOCAL_DIR: 'wordpress'
 
 jobs:
-  performance:
-    name: Plugin Performance Tests
+  test:
+    name: Run E2E Tests
     runs-on: ubuntu-latest
     permissions:
       contents: read
     timeout-minutes: 20
 
-    strategy:
-      matrix:
-        test-type: ['current', 'before']
-
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: ${{ matrix.test-type == 'before' && 2 || 1 }}
           persist-credentials: false
 
       - uses: actions/setup-node@v4
@@ -45,7 +40,8 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
 
-      - name: Set up Docker environment
+      # Ensure Docker is set up properly
+      - name: Set up Docker
         uses: docker/setup-buildx-action@v3
     
       - name: Install Docker Compose
@@ -55,44 +51,28 @@ jobs:
           sudo systemctl start docker
           sudo chmod 666 /var/run/docker.sock
 
-      # Set up clean WordPress test environment
+      # Configure environment variables for wp-env
+      - name: Configure environment
+        run: |
+          echo "PHP_FPM_UID=$(id -u)" >> "$GITHUB_ENV"
+          echo "PHP_FPM_GID=$(id -g)" >> "$GITHUB_ENV"
+
+      # Start WordPress environment and wait for it to be ready
       - name: Start WordPress Environment
         run: |
           npm run test:env:start
           npx wait-on http://localhost:8889
 
-      # Import consistent test data
-      - name: Import test content
-        run: |
-          curl -O https://raw.githubusercontent.com/WordPress/theme-test-data/master/themeunittestdata.wordpress.xml
-          npm run env:cli -- import themeunittestdata.wordpress.xml --authors=create --path="/var/www/${LOCAL_DIR}"
+      # Run the actual tests
+      - name: Run Playwright tests
+        run: npx playwright test
 
-      # Configure for stable performance testing
-      - name: Configure test environment
-        run: |
-          npm run env:cli -- config set WP_HTTP_BLOCK_EXTERNAL true --raw --type=constant
-          npm run env:cli -- config set DISABLE_WP_CRON true --raw --type=constant
-
-      # Install performance monitoring plugin
-      - name: Install performance monitoring
-        run: |
-          mkdir -p "./${LOCAL_DIR}/wp-content/mu-plugins"
-          cp ./tests/performance/mu-plugins/performance-monitor.php "./${LOCAL_DIR}/wp-content/mu-plugins/"
-
-      - name: Run performance tests
-        run: npm run test:performance
-        env:
-          TEST_RESULTS_PREFIX: ${{ matrix.test-type }}
-
-      - name: Archive test results
-        uses: actions/upload-artifact@v4
+      # Archive test results
+      - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: performance-results-${{ matrix.test-type }}-${{ github.run_id }}
-          path: artifacts
-          if-no-files-found: error
+          name: playwright-report-${{ github.run_id }}
+          path: |
+            playwright-report/
+            test-results/
           retention-days: 30
-
-      - name: Compare results
-        if: ${{ matrix.test-type == 'current' }}
-        run: node ./tests/performance/compare-results.js
