--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -30,12 +30,22 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      # Cache Playwright browsers to speed up subsequent runs.
+      - name: Cache Playwright browsers
+        id: playwright-cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ms-playwright
+          key: playwright-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
+
+      # Only install browsers if cache miss occurred.
+      - name: Install Playwright browsers
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
+        run: npx playwright install chromium --with-deps
+
       # Install and configure WordPress environment.
       - name: Install WordPress Environment
         run: npm install -g @wordpress/env
-
-      - name: Install Playwright browsers
-        run: npx playwright install chromium --with-deps
 
       # Start WordPress environment and wait for it to be ready.
       - name: Start WordPress Environment
