--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -30,6 +30,15 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Create docker-compose alias for Docker Compose v2
+        run: |
+          # Create a wrapper script that forwards arguments to "docker compose"
+          echo '#!/bin/sh
+          docker compose "$@"' | sudo tee /usr/local/bin/docker-compose
+          # Make the script executable
+          sudo chmod +x /usr/local/bin/docker-compose
+
+
       # Cache Playwright browsers to speed up subsequent runs.
       - name: Cache Playwright browsers
         id: playwright-cache
